src/test/deca/syntax/valid/created/voidElmt/variable.deca
// Description:
//      Declaration d'une variable void
// Resultat:
//      OK

{
    void a;
}