src/test/deca/syntax/invalid/created/miss_element/no_parent_methods_definition.deca
// Description:
//      Declaration d'une methode sans parenthese
// Resultats:
//      Erreur de syntaxe Ligne 7 : no viable alternative at input 'voidaffiche{'

class A {
    void affiche{}
}
